--- a/quickcart.css
+++ b/quickcart.css
@@ -6,14 +6,15 @@
 }
 header{
   display:flex;
-  gap:25px;
-  flex-direction:row;
   align-items:center;
   padding:20px;
- 
+ background-color:#007BFF;
+  color:#fff;
+  width: 100%;
  
 
 }
+
 nav{
   display:flex;
   gap:30px;
@@ -26,10 +27,7 @@ nav{
 
 
  
-h1{
-  
-  top:0;
-}
+
 body{
   background-color:blac
 }
@@ -37,16 +35,51 @@ body{
 
 a{
   text-decoration:none;
+  margin-top: 16px;
+  color:#F5F5F5;
+  margin-right: 15px;
+  font-weight: bold;
+  display:flex;
+  padding:4px;
+  background-color: #007BFF;
   
+  
+}
+a:hover{
+  border: 1px solid black;
+  padding: 4px;
+}
+#nav-bar{
+   align-items:center;
+   margin-top: 20px;
 }
 #login{
   display:flex;
   flex-direction:column;
 justify-content:center;
 align-items:center;
-margin-top:20px;
+margin-top:0px;
 
 
+}
+#shareData{
+  background-color: #007BFF;
+  color:#F5F5F5;
+  border:none;
+  margin-top: 16px;
+  font-weight: bold;
+  margin-right: 5px;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 16px;
+  padding: 4px;
+}
+#shareData:hover{
+  border:1px solid black;
+  padding: 4px;
+}
+.heading{
+  margin-top: 20px;
+  margin-left: 8px;
 }
 
 
@@ -108,8 +141,54 @@ input[type=email]{
 
 
 }
+.product-grid{
+  display:grid;
+  grid-template-columns: repeat(3,1fr);
+}
+.product-container{
+  display:flex;
+  flex-direction: column;
+  padding-left: 25px;
+  padding-right: 25px;
+  padding-bottom: 25px;
+  padding-top: 40px;
+ 
+  
+}
+.product-image-container
+{
+  display: flex;
+  height:180px;
+  margin-bottom: 20px;
+  justify-content: center;
+  align-items: center;
+}
 
 
+
+.product-image{
+
+
+  max-width: 100%;
+  max-height:100%;
+}
+.product-name{
+  height: 40px;;
+}
+.add-to-cart-button{
+  border-radius: 20px;
+  margin-top: 5px;
+  padding: 5px;
+  background-color:#007BFF;
+  color:#fff
+}
+
+footer{
+  background-color: #007BFF;
+  color:#fff;
+  padding: 10px;
+  width:100%;
+}
 
   
 
