--- a/quickcart.css
+++ b/quickcart.css
@@ -171,6 +171,7 @@ input[type=email]{
 
   max-width: 100%;
   max-height:100%;
+  object-fit: cover;
 }
 .product-name{
   height: 40px;;
@@ -189,21 +190,40 @@ footer{
   padding: 10px;
   width:100%;
 }
+@media (max-width: 2000px) {
+  .products-grid {
+    grid-template-columns: repeat(7, 1fr);
+  }
+}
+
 @media (max-width: 768px) {
     header h1 {
         font-size: 2rem;
+        max-width:100%
     }
-    nav a {
+    nav  {
+      margin-top: 10px;
         display: block;
-        margin: 10px 0;
+        padding:5px;
     }
-    .product-details img {
+    .product-image {
         max-width: 100%;
+        height: auto;
+        margin-bottom: 6px; 
     }
-    .product-details h2 {
-        font-size: 2rem;
+    .product-name{
+        font-size: 1rem;
+        max-width: 120px;
+       overflow: hidden;
+        
+    }
+    .product-price{
+        font-size: 1rem;
+        margin-bottom: 30px;
+    }
+    footer{
+      max-width: 100%;
     }
 }
-
   
 
