--- a/quickcart.css
+++ b/quickcart.css
@@ -6,12 +6,13 @@
 }
 header{
   display:flex;
-  position:fixed;
+ position: fixed;
   align-items:center;
   padding:20px;
  background-color:#007BFF;
   color:#fff;
   width: 100%;
+   
  
 
 }
@@ -24,13 +25,6 @@ nav{
   top:0;
   
   
-}
-
-
- 
-
-body{
-  background-color:blac
 }
 
 
@@ -55,14 +49,18 @@ a:hover{
    margin-top: 20px;
 }
 #login{
+  padding-top: 100px;
   display:flex;
   flex-direction:column;
 justify-content:center;
 align-items:center;
-margin-top:0px;
+
+
+
 
 
 }
+
 #shareData{
   background-color: #007BFF;
   color:#F5F5F5;
@@ -79,6 +77,7 @@ margin-top:0px;
   padding: 4px;
 }
 .heading{
+  
   margin-top: 20px;
   margin-left: 8px;
 }
@@ -175,7 +174,7 @@ input[type=email]{
   object-fit: cover;
 }
 .product-name{
-  height: 40px;;
+  height: 40px;
 }
 .add-to-cart-button{
   border-radius: 20px;
@@ -189,13 +188,13 @@ footer{
   background-color: #007BFF;
   color:#fff;
   padding: 10px;
-  width:100%;
+  z-index: 1000;
+   width:100%;
+   left: 0;
+   right:0;
+  
 }
-@media (max-width: 2000px) {
-  .products-grid {
-    grid-template-columns: repeat(7, 1fr);
-  }
-}
+
 
 @media (max-width: 768px) {
     header  {
@@ -203,7 +202,7 @@ footer{
         max-width:100%
     }
     #header-name{
-      font-size: 0.9rem;
+      font-size: 1rem;
       
     }
     #header-icon{
@@ -212,16 +211,16 @@ footer{
       
     }
     #nav-bar{
-      font-size: 0.5rem;
+      font-size: 0.7rem;
       display: flex;
       gap:0px;
-     margin-top:16px;
+     margin-top:15px;
       padding: 0px;
     
 
     }
     #shareData{
-       font-size: 0.5rem;
+       font-size: 0.7rem;
     }
     .product-image {
         max-width: 100%;
@@ -236,10 +235,11 @@ footer{
     }
     .product-price{
         font-size: 1rem;
-        margin-bottom: 30px;
+       
     }
     footer{
       max-width: 100%;
+      
     }
 }
   
